k8s/usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: tuusuario/usuarios-service:latest # Reemplaza con tu imagen real
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: usuarios-data
              mountPath: /app/usuarios.json
              subPath: usuarios.json
      volumes:
        - name: usuarios-data
          configMap:
            name: usuarios-config
