k8s/svc-tokens.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokens-svc
  namespace: token-sale
spec:
  selector: { app: tokens }
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
