k8s/svc-transacciones.yaml
apiVersion: v1
kind: Service
metadata:
  name: transacciones-svc
  namespace: token-sale
spec:
  selector: { app: transacciones }
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
