k8s/svc-usuarios.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-svc
  namespace: token-sale
spec:
  selector: { app: usuarios }
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
