k8s/usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  selector:
    app: usuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort # Puedes usar ClusterIP si no necesitas acceso externo
